# ImpactGuard

./: .bumpversion.cfg  .coverage  .gitignore  .pre-commit-config.yaml  .signatures.txt  ACTION_PLAN.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  Post-commit Hook Advice.md  README.md  SPEC.md  analyze_module.py  compare_signatures.py  cst_patch.py  enforce_gate.py  extract_calls.py  extract_signatures.py  generate_report.py  impact_analysis.py  impact_report.html  impactguard.toml  patch_confidence.py  patch_generator.py  png2svg.py  pyproject.toml  report.json  requirements.txt  risk_gate.py  runtime_impact.py  solution.txt  suggest_fixes.py  test_consolidated.py  test_impactguard.py  trace_calls.py  trace_calls_prod.py
.github/workflows/: ci.yml  pypi-publish.yml
examples/: conftest.py
examples/c/new/: main.c
examples/c/old/: main.c
examples/cpp/new/: main.cpp
examples/cpp/old/: main.cpp
examples/go/new/: main.go
examples/go/old/: main.go
examples/java/new/: Example.java
examples/java/old/: Example.java
examples/python/: README.md  patch_command_example.py  patch_example.py
examples/python/new/: main.py
examples/python/old/: main.py
examples/ruby/new/: main.rb
examples/ruby/old/: main.rb
examples/rust/new/: main.rs
examples/rust/old/: main.rs
examples/typescript/new/: main.ts
examples/typescript/old/: main.ts
src/impactguard/: __init__.py  __main__.py  _logging.py  _pathutils.py  adversarial_generator.py  analyze_module.py  baseline.py  class_hierarchy.py  cli.py  compare_signatures.py  config.py  cst_patch.py  enforce_gate.py  extract_calls.py  extract_signatures.py  feedback.py  generate_report.py  impact_analysis.py  kpi.py  patch_confidence.py  patch_generator.py  pipeline.py  risk_gate.py  risk_model.py  runtime_impact.py  schema.py  semver.py  suggest_fixes.py  trace_calls.py  trace_calls_prod.py
src/impactguard/languages/: __init__.py  _shared.py  base.py  c.py  csharp.py  go.py  haskell.py  java.py  javascript.py  kotlin.py  python.py  registry.py  ruby.py  rust.py  swift.py  typescript.py  zig.py
src/impactguard/languages/lib/: __init__.py  registry.py  shared.py
test/s/: test_cli_fixed.py  test_coverage_boost.py  test_coverage_final.py  test_integration.py  test_pipeline.py
tests/: __init__.py  adversarial_generator.py  conftest.py  test_80_final.py  test_80_percent.py  test_80_push.py  test_adversarial.py  test_adversarial_all.py  test_adversarial_generator.py  test_adversarial_taxonomy.py  test_analyze.py  test_analyze_module_more.py  test_basic.py  test_cli.py  test_cli_fixed.py  test_compare.py  test_consolidated.py  test_coverage_adversarial.py  test_coverage_basics.py  test_coverage_boost.py  test_coverage_boost2.py  test_coverage_consolidated.py  test_coverage_final.py  test_coverage_misc.py  test_cst.py  test_cst_patch.py  test_enforce.py  test_enrich.py  test_even_more_coverage.py  test_extract.py  test_extract_calls.py  test_final_80.py  test_final_80_push.py  test_final_coverage.py  test_final_coverage_checks.py  test_final_coverage_push.py  test_final_push_80.py  test_generate.py  test_impact.py  test_impactguard.py  (+33 more)
tests/test_data/: module.py  new_module.py
tests/test_data/new/: module.py
tools/: robustness_evaluator.py
