[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impactguard"
version = "0.1.0"
description = "Lightweight API impact analyzer for Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "libcst>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatchling",
    "pip-api",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "prospector",
    "semgrep",
    "mypy",
]
languages = [
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-ruby>=0.23",
]
all = ["impactguard[dev,test,lint,languages]"]

[project.scripts]
impactguard = "impactguard.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/ImpactGuard"
Repository = "https://github.com/daedalus/ImpactGuard"
Issues = "https://github.com/daedalus/ImpactGuard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/impactguard"]

[tool.hatch.build.targets.sdist]
include = ["src/impactguard"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["ANN", "TCH", "N806", "E712", "F401"]
"src/impactguard/cli.py" = ["E402"]
"src/impactguard/trace_calls.py" = ["ANN401"]
"src/impactguard/trace_calls_prod.py" = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.prospector.tools]
pylint = true
pyflakes = true
mccabe = true

[tool.pylint.messages_control]
disable = [
    "wrong-import-position",
    "import-outside-toplevel",
    "pointless-string-statement",
    "unspecified-encoding",
    "unused-import",
    "too-many-branches",
    "too-many-locals",
    "consider-using-enumerate",
    "no-else-return",
    "consider-using-with",
]

[tool.mccabe]
max-complexity = 20

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
