[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impactguard"
version = "0.1.3"
description = "Lightweight API impact analyzer for Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Darío Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = [
    "libcst>=0.4.0",
    "pre-commit>=4.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatchling",
    "pip-api",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "ruff",
    "prospector",
    "semgrep",
    "mypy",
]
languages = [
    "tree-sitter>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "tree-sitter-ruby>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-kotlin>=0.23",
    "tree-sitter-swift>=0.7.2",
    "tree-sitter-zig>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-haskell>=0.23",
]
all = ["impactguard[dev,test,lint,languages]"]

[project.scripts]
impactguard = "impactguard.__main__:main"
impactguard-check-staged = "impactguard.__main__:check_staged"
impactguard-post-commit-hook = "impactguard.__main__:post_commit_hook"

# Third-party packages can contribute additional language extractors by
# declaring entry points in this group.  Each entry point must reference a
# class (not an instance) that satisfies the LanguageExtractor protocol.
# Example (in your package's pyproject.toml):
#   [project.entry-points."impactguard.languages"]
#   mylang = "mypkg.mylang_extractor:MyLangExtractor"
[project.entry-points."impactguard.languages"]

[project.urls]
Homepage = "https://github.com/daedalus/ImpactGuard"
Repository = "https://github.com/daedalus/ImpactGuard"
Issues = "https://github.com/daedalus/ImpactGuard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/impactguard"]

[tool.hatch.build.targets.sdist]
include = ["src/impactguard"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"tests/*" = ["ANN", "TCH", "N806", "E712", "F401", "ARG001", "ARG002", "ARG005", "UP038", "F841", "C416"]
"src/impactguard/cli.py" = ["E402"]
"src/impactguard/trace_calls.py" = ["ANN401"]
"src/impactguard/trace_calls_prod.py" = ["ANN401", "E402"]
"src/impactguard/analyze_module.py" = ["N802"]
"src/impactguard/extract_calls.py" = ["N802"]
"src/impactguard/extract_signatures.py" = ["N802"]
"src/impactguard/languages/*.py" = ["F821", "N806", "TC003", "F401"]
"src/impactguard/feedback.py" = ["N806"]
"src/impactguard/pipeline.py" = ["ARG001", "F823"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["src/impactguard/__init__.py", "src/impactguard/__main__.py", "src/impactguard/_pathutils.py", "examples", "tests"]

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.prospector.tools]
pylint = true
pyflakes = true
mccabe = true

[tool.pylint.messages_control]
disable = [
    "wrong-import-position",
    "import-outside-toplevel",
    "pointless-string-statement",
    "unspecified-encoding",
    "unused-import",
    "too-many-branches",
    "too-many-locals",
    "consider-using-enumerate",
    "no-else-return",
    "consider-using-with",
]

[tool.mccabe]
max-complexity = 20

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
